--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -107,8 +107,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <div title>Christophe Gerard
 			</div>
-			<div>
-				<a href="https://github.com/Heliex/" target="_blank" ><social-media-icons icon="github" color="darkgrey" size="72"></social-media-icons></a>
+			<div class="socialMedia">
+				<a href="https://github.com/Heliex/" target="_blank" ><social-media-icons icon="github" color="darkgrey" size="32"></social-media-icons></a>
+				<a href="https://plus.google.com/u/0/115001132326251821958" target="_blank" ><social-media-icons icon="googleplus" color="darkgrey" size="32"></social-media-icons></a>
 			</div>
           </app-toolbar>
         </app-header>
