--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -108,8 +108,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <div title>Christophe Gerard
 			</div>
 			<div class="socialMedia">
-				<a href="https://github.com/Heliex/" target="_blank" ><social-media-icons icon="github" color="darkgrey" size="32"></social-media-icons></a>
-				<a href="https://plus.google.com/u/0/115001132326251821958" target="_blank" ><social-media-icons icon="googleplus" color="darkgrey" size="32"></social-media-icons></a>
+				<a href="https://github.com/Heliex/" target="_blank" ><social-media-icons icon="github" color="darkgrey" size="10%"></social-media-icons></a>
+				<a href="https://plus.google.com/u/0/115001132326251821958" target="_blank" ><social-media-icons icon="googleplus" color="darkgrey" size="10%"></social-media-icons></a>
 			</div>
           </app-toolbar>
         </app-header>
