--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -19,8 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/social-media-icons/social-media-icons.html">
-<link rel="import" href="my-icons.html">
+<link rel="import" href="my-svg">
 
 <dom-module id="my-app">
 
@@ -108,8 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <div title>Christophe Gerard
 			</div>
 			<div class="socialMedia">
-				<a href="https://github.com/Heliex/" target="_blank" ><social-media-icons icon="github" color="darkgrey" size="10%"></social-media-icons></a>
-				<a href="https://plus.google.com/u/0/115001132326251821958" target="_blank" ><social-media-icons icon="googleplus" color="darkgrey" size="10%"></social-media-icons></a>
+				<a href="https://github.com/Heliex" src="../public/images/Reseaux/github.svg" width="10%" height="10%"></a>
 			</div>
           </app-toolbar>
         </app-header>
