--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -107,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <div title>Christophe Gerard
 			</div>
 			<div class="socialMedia">
-				<a href="https://github.com/Heliex" src="../public/images/Reseaux/github.svg" width="10%" height="10%"></a>
+				<a href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="10%" height="10%"></my-svg></a>
 			</div>
           </app-toolbar>
         </app-header>
