--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -104,11 +104,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div title>Christophe Gerard
+            <div title>
+			<div>Christophe Gerard</div>
+				<div class="socialMedia">
+					<a href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="10%" height="10%"></my-svg></a>
+				</div>
 			</div>
-			<div class="socialMedia">
-				<a href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="10%" height="10%"></my-svg></a>
-			</div>
+			
           </app-toolbar>
         </app-header>
 
