--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -96,7 +96,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
         </iron-selector>
-		<a href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
+		<div class="socialMedia"><a href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a></div>
       </app-drawer>
 
       <!-- Main content -->
