--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -74,6 +74,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	  color : #F8F0C2;
       font-size: 14px;
     }
+	
+	.svg
+	{
+		position : relative;
+		display: inline-block;
+	}
 
 
     </style>
@@ -96,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
         </iron-selector>
-		<div class="socialMedia"><a href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a></div>
+		<div class="socialMedia"><a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a></div>
       </app-drawer>
 
       <!-- Main content -->
