--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -75,11 +75,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       font-size: 14px;
     }
 	
-	.svg
+	a.svg
 	{
 		position : relative;
 		display: inline-block;
 	}
+	
+	a.svg:after {
+  content: ""; 
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left:0;
+}
 
 
     </style>
@@ -102,7 +111,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
         </iron-selector>
-		<div class="socialMedia"><a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a></div>
+		<a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
       </app-drawer>
 
       <!-- Main content -->
