--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -88,6 +88,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   right: 0;
   bottom: 0;
   left:0;
+  
+  .reseauSociaux
+  {
+	text-align : center;
+  }
 }
 
 
@@ -111,7 +116,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
         </iron-selector>
-		<div>
+		<div class="reseauSociaux">
 			<a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"></my-svg></a>
 			<a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
 		</div>
