--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -116,10 +116,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
         </iron-selector>
-		<div class="reseauSociaux">
-			<p><div><a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"></my-svg></a></div></p>
-			<p><div><a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a></div></p>
-		</div>
       </app-drawer>
 
       <!-- Main content -->
@@ -129,6 +125,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <div title>Christophe Gerard</div>
+			<div class="reseauSociaux" width ="25%">
+			<a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"></my-svg></a>
+			<a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
+			</div>
           </app-toolbar>
         </app-header>
 
