--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -107,8 +107,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <div title>Christophe Gerard</div>
 			<div class="reseauSociaux" width ="25%">
-			<a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"></my-svg></a>
-			<a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
+				<my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"><a class="svg" href="https://github.com/Heliex" target="_blank"></a></my-svg>
+				<my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"><a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"></a></my-svg>
 			</div>
           </app-toolbar>
         </app-header>
