--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -117,10 +117,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		  <my-projects name="projects" route="{{route}}"></my-projects>
         </iron-pages>
 		<footer> Christophe GERARD - 2016 &copy; 
-			<div class="reseauSociaux" width ="25%">
-				<my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"><a class="svg" href="https://github.com/Heliex" target="_blank"></a></my-svg>
-				<my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"><a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"></a></my-svg>
-			</div>
+			<a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"></my-svg></a>
+			<a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
 		</footer>
       </app-header-layout>
 
