--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -96,6 +96,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="experiences" href="#/experiences">Expériences</a>
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
+		  <a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"></my-svg></a>
+		  <a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
         </iron-selector>
       </app-drawer>
 
@@ -116,10 +118,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-skills name="skills" route="{{route}}"></my-skills>
 		  <my-projects name="projects" route="{{route}}"></my-projects>
         </iron-pages>
-		<footer> Christophe GERARD - 2016 &copy; 
-			<a class="svg" href="https://github.com/Heliex" target="_blank"><my-svg src="../public/images/Reseaux/github.svg" width="25%" height="25%"></my-svg></a>
-			<a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><my-svg src="../public/images/Reseaux/googleplus.svg" width="25%" height="25%"></my-svg></a>
-		</footer>
+		<footer> Christophe GERARD - 2016 &copy;</footer>
       </app-header-layout>
 
     </app-drawer-layout>
