--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -67,13 +67,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             background-color : #548DA6;
         }
 		footer {
-      height: 50px;
-      line-height: 50px;
-      text-align: center;
-      background-color: #3F525A;
-	  color : #F8F0C2;
-      font-size: 14px;
-    }
+		  height: 50px;
+		  line-height: 50px;
+		  text-align: center;
+		  background-color: #3F525A;
+		  color : #F8F0C2;
+		  font-size: 14px;
+		}
+		a.svg {
+		 position: relative;
+		 display: inline-block; 
+		}
+		a.svg:after {
+		  content: ""; 
+		  position: absolute;
+		  top: 0;
+		  right: 0;
+		  bottom: 0;
+		  left:0;
+		}
 }
 
 
