--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -77,14 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		a.svg {
 		 position: relative;
 		 display: inline-block; 
-		}
-		a.svg:after {
-		  content: ""; 
-		  position: absolute;
-		  top: 0;
-		  right: 0;
-		  bottom: 0;
-		  left:0;
+		 text-align : center;
 		}
 }
 
