--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -75,9 +75,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		  font-size: 14px;
 		}
 		a.svg {
-		 position: relative;
-		 display: inline-block; 
 		 text-align : center;
+		 margin-bottom : -10%;
+		 background-color : white;
+		}
+		
+		a.svg:after
+		{
+		  content: ""; 
+		  position: absolute;
+		  top: 0;
+		  right: 0;
+		  bottom: 0;
+		  left:0;
 		}
 }
 
