--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -97,15 +97,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="experiences" href="#/experiences">Expériences</a>
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
-		  <iron-icon class="size72 colorize" icon="social-iconset:twitter"></iron-icon>
-		  <iron-icon class="size72 colorize" icon="social-iconset:github"></iron-icon>
-			<iron-icon class="size72 colorize" icon="social-iconset:facebook"></iron-icon>
-			<iron-icon class="size72 colorize" icon="social-iconset:instagram"></iron-icon>
-			<iron-icon class="size72 colorize" icon="social-iconset:linkedin"></iron-icon>
-			<iron-icon class="size72 colorize" icon="social-iconset:youtube"></iron-icon>
-			<iron-icon class="size72 colorize" icon="social-iconset:rss"></iron-icon>
-			<iron-icon class="size72 colorize" icon="social-iconset:vimeo"></iron-icon>
-			<iron-icon class="size72 colorize" icon="social-iconset:googleplus"></iron-icon>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:twitter"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:github"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:facebook"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:instagram"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:linkedin"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:youtube"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:rss"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:vimeo"></iron-icon></a>
+		  <a><iron-icon class="size72 colorize" icon="social-iconset:googleplus"></iron-icon></a>
         </iron-selector>
       </app-drawer>
 
