--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/social-iconset/social-iconset.html">
+<link rel="import" href="../bower_components/social-media-icons/social-media-icons.html">
 <link rel="import" href="my-svg.html">
 
 <dom-module id="my-app">
@@ -97,15 +97,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="experiences" href="#/experiences">Expériences</a>
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
-		  <a><iron-icon class="colorize" icon="social-iconset:twitter"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:github"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:facebook"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:instagram"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:linkedin"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:youtube"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:rss"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:vimeo"></iron-icon></a>
-		  <a><iron-icon class="colorize" icon="social-iconset:googleplus"></iron-icon></a>
+		  <a href="https://github.com/Heliex" target="_blank"><social-media-icons icon="github" color="#42C0FB" size="32" title="Github Heliex's profile" ></social-media-icons></a>
         </iron-selector>
       </app-drawer>
 
