--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -75,6 +75,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		  color : #F8F0C2;
 		  font-size: 14px;
 		}
+		.svg 
+		{
+			text-align : center;
+		}
 }
 
 
@@ -97,7 +101,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="experiences" href="#/experiences">Expériences</a>
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
-		  <a href="https://github.com/Heliex" target="_blank"><social-media-icons icon="github" color="#42C0FB" size="32" title="Github Heliex's profile" ></social-media-icons></a>
+		  <a class="svg" href="https://github.com/Heliex" target="_blank"><social-media-icons icon="github" color="#42C0FB" size="32" title="Github Heliex's profile" ></social-media-icons></a>
+		  <a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><social-media-icons icon="googleplus" color="#42C0FB" size="32" title="G+ Heliex's profile" ></social-media-icons></a>
         </iron-selector>
       </app-drawer>
 
