--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/social-media-icons/social-media-icons.html">
 <link rel="import" href="my-svg.html">
+<link rel="import" href="my-icon.html">
 
 <dom-module id="my-app">
 
@@ -103,6 +104,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		  <a name="projects" href="#/projects">Projets</a>
 		  <a class="svg" href="https://github.com/Heliex" target="_blank"><social-media-icons icon="github" color="#42C0FB" size="72" title="Github Heliex's profile" ></social-media-icons></a>
 		  <a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><social-media-icons icon="googleplus" color="#DF4F3F" size="72" title="G+ Heliex's profile" ></social-media-icons></a>
+		  <a class="svg" href="https://twitter.com/gerard8_gerard" target="_blank"><social-media-icons icon="twitter" color="#1DA1F2" size="72" title="Twitter profile"</a></social-media-icons>
+		  <a class="svg" href="https://facebook.com/HeliexIn" target="_blank"><social-media-icons icon="facebook" color="#3B5999" size="72" title="Facebook profile"</a></social-media-icons>
+		  <a class="svg" href="https://www.quora.com/profile/Gerard-Christophe" target="_blank"><social-media-icons icon="quora" color="#B72D2C" size="72" title="Quora profile"</a></social-media-icons>
+		  <a class="svg" href="#" target="_blank"><social-media-icons icon="skype" color="#00A8E6" size="72" title="Tyti8888"</a></social-media-icons>
+		  
         </iron-selector>
       </app-drawer>
 
