--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -106,7 +106,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		  <a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><social-media-icons icon="googleplus" color="#DF4F3F" size="36" title="G+ Heliex's profile" ></social-media-icons></a>
 		  <a class="svg" href="https://twitter.com/gerard8_gerard" target="_blank"><social-media-icons icon="twitter" color="#1DA1F2" size="36" title="Twitter profile"</a></social-media-icons>
 		  <a class="svg" href="https://facebook.com/HeliexIn" target="_blank"><social-media-icons icon="facebook" color="#3B5999" size="36" title="Facebook profile"</a></social-media-icons>
-		  <a class="svg" href="https://www.quora.com/profile/Gerard-Christophe" target="_blank"><social-media-icons icon="quora" color="#B72D2C" size="36" title="Quora profile"</a></social-media-icons>
+		  <a class="svg" href="https://www.linkedin.com/in/christophegerard8" target="_blank"><social-media-icons icon="linkedin" color="#F1F1F1" size="36" title="Linked In"</a></social-media-icons>
 		  <a class="svg" href="javascript:void(0);" target="_blank"><social-media-icons icon="skype" color="#00A8E6" size="36" title="Tyti8888"</a></social-media-icons>
         </iron-selector>
       </app-drawer>
