Ajout d'un titre au drawer

--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -81,6 +81,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		{
 			text-align : center;
 		}
+		
+		.navigation
+		{
+			    background-color: #444444;
+				margin-bottom: -10%;
+				padding-bottom: 5.8%;
+				margin-top: 0%;
+				padding-top: 10%;
+		}
 }
 
 
@@ -104,13 +113,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="experiences" href="#/experiences">Expériences</a>
           <a name="skills" href="#/skills">Compétences</a>
 		  <a name="projects" href="#/projects">Projets</a>
-		  <a class="svg" href="https://github.com/Heliex" target="_blank"><social-media-icons icon="github" color="#42C0FB" size="36" title="Github Heliex's profile" ></social-media-icons></a>
-		  <a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><social-media-icons icon="googleplus" color="#DF4F3F" size="36" title="G+ Heliex's profile" ></social-media-icons></a>
-		  <a class="svg" href="https://twitter.com/gerard8_gerard" target="_blank"><social-media-icons icon="twitter" color="#1DA1F2" size="36" title="Twitter profile"</a></social-media-icons>
-		  <a class="svg" href="https://facebook.com/HeliexIn" target="_blank"><social-media-icons icon="facebook" color="#3B5999" size="36" title="Facebook profile"</a></social-media-icons>
-		  <a class="svg" href="https://www.linkedin.com/in/christophegerard8" target="_blank"><social-media-icons icon="linkedin" color="#0274B3" size="36" title="Linked In"</a></social-media-icons>
-		  <a class="svg" href="javascript:void(0);" target="_blank"><social-media-icons icon="skype" color="#00A8E6" size="36" title="Tyti8888"</a></social-media-icons>
         </iron-selector>
+		<div>
+			  <a class="svg" href="https://github.com/Heliex" target="_blank"><social-media-icons icon="github" color="#42C0FB" size="36" title="Github Heliex's profile" ></social-media-icons></a>
+			  <a class="svg" href="https://plus.google.com/u/0/115001132326251821958" target="_blank"><social-media-icons icon="googleplus" color="#DF4F3F" size="36" title="G+ Heliex's profile" ></social-media-icons></a>
+			  <a class="svg" href="https://twitter.com/gerard8_gerard" target="_blank"><social-media-icons icon="twitter" color="#1DA1F2" size="36" title="Twitter profile"</a></social-media-icons>
+			  <a class="svg" href="https://facebook.com/HeliexIn" target="_blank"><social-media-icons icon="facebook" color="#3B5999" size="36" title="Facebook profile"</a></social-media-icons>
+			  <a class="svg" href="https://www.linkedin.com/in/christophegerard8" target="_blank"><social-media-icons icon="linkedin" color="#0274B3" size="36" title="Linked In"</a></social-media-icons>
+			  <a class="svg" href="javascript:void(0);" target="_blank"><social-media-icons icon="skype" color="#00A8E6" size="36" title="Tyti8888"</a></social-media-icons>
+		</div>
       </app-drawer>
 
       <!-- Main content -->
