Ajout image + background drawer

--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -84,11 +84,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		
 		.navigation
 		{
-			    background-color: #444444;
+			    background : url("../public/images/backgroundDrawer.png");
 				margin-bottom: -9.6%;
 				padding-bottom: 5.4%;
 				margin-top: 0%;
 				padding-top: 10%;
+				color : #F8F0C2;
 		}
 }
 
