--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -84,7 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		
 		.navigation
 		{
-			    background : url("../public/images/backgroundDrawer.png");
+			    background : url("../public/images/backgroundDrawer.jpg");
 				margin-bottom: -9.6%;
 				padding-bottom: 5.4%;
 				margin-top: 0%;
