--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -107,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <!-- Drawer content -->
       <app-drawer>
-	   <div class="navigation"><p > Menu</p><div>
+	   <div><p class="navigation"> Menu</p>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="history" href="#/history">Histoire</a>
           <a name="diploma" href="#/diploma">Diplômes</a>
