--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -84,12 +84,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		
 		.navigation
 		{
-			    background : url("../public/images/backgroundDrawer.svg");
+			    background-color: #444444;
 				margin-bottom: -9.6%;
 				padding-bottom: 5.4%;
 				margin-top: 0%;
 				padding-top: 10%;
-				color : #F8F0C2;
+				color : #F8F0C2;:
 		}
 }
 
@@ -107,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <!-- Drawer content -->
       <app-drawer>
-	   <div><p class="navigation"> Menu</p>
+	   <p class="navigation"> Menu</p>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="history" href="#/history">Histoire</a>
           <a name="diploma" href="#/diploma">Diplômes</a>
