--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -84,7 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		
 		.navigation
 		{
-			    background-color: #444444;
+			    background-image: url('../public/images/backgroundDrawer.svg');
 				margin-bottom: -9.6%;
 				padding-bottom: 5.4%;
 				margin-top: 0%;
