--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -85,6 +85,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		.navigation
 		{
 			    background-image: url('../public/images/backgroundDrawer.svg');
+				-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+				background-size: cover; /* version standardisée */
 				margin-bottom: -9.6%;
 				padding-bottom: 5.4%;
 				margin-top: 0%;
