--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -86,12 +86,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		{
 			    background-image: url('../public/images/backgroundDrawer.svg');
 				-webkit-background-size: cover; /* pour anciens Chrome et Safari */
-				background-size: cover; /* version standardisée */
-				margin-bottom: -9.6%;
-				padding-bottom: 5.4%;
+				background-size: cover;
+				margin-bottom: -9.5%;
+				padding-bottom: 4.0%;
+				font-size: 1.6em;
 				margin-top: 0%;
-				padding-top: 10%;
-				color : #F8F0C2;:
+				padding-top: 6%;
+				color: #F8F0C2;
 		}
 }
 
