--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -67,7 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
         .pages
         {
-            background-color : #548DA6;
+           background-image : url('../public/images/background.gif');
         }
 		footer {
 		  height: 50px;
