Ptit css des familles

--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -36,8 +36,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       app-header {
-        background-color: var(--app-primary-color);
         color: #F8F0C2;
+		background-image: url('../public/images/header.jpg');
+		background-size: contain;
       }
       app-header paper-icon-button {
         --paper-icon-button-ink-color: white;
