--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -65,6 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
         app-toolbar {
             text-align: center;
+			font-size : 1.6em;
         }
         .pages
         {
