--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -44,7 +44,10 @@
 				text-align : center;
 			}
 		</style>
-		
+		<div class="card">
+		  <div class="circle">1</div>
+		  <h1>PlastProd</h1>
+		</div>
 	</template>
 	<script>
 		Polymer({
