--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -37,8 +37,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       app-header {
         color: #F8F0C2;
-		background-image: url('../public/images/header.jpg');
-		background-size: contain;
+		background-image: url('../public/images/backgroundDrawer.jpg');
+        background-size: cover;
       }
       app-header paper-icon-button {
         --paper-icon-button-ink-color: white;
@@ -86,7 +86,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		
 		.navigation
 		{
-			    background-image: url('../public/images/backgroundDrawer.svg');
+			    background-image: url('../public/images/header.jpg');
 				-webkit-background-size: cover; /* pour anciens Chrome et Safari */
 				background-size: cover;
 				margin-bottom: -9.5%;
@@ -94,7 +94,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 				font-size: 1.6em;
 				margin-top: 0%;
 				padding-top: 6%;
-				color: #F8F0C2;
+				color: #3F525A;
 		}
 }
 
