--- a/front/src/my-history.html
+++ b/front/src/my-history.html
@@ -27,6 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-radius: 5px;
         background-color: #3F525A;
         color: #F8F0C2;
+        text-align: justify;
       }
       .circle {
         display: inline-block;
