--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -16,6 +16,7 @@
 				border-radius: 5px;
 				background-color: #3F525A;
 				color: #F8F0C2;
+                text-align: justify;
 		  }
 		  .circle {
 				display: inline-block;
