--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -1,4 +1,4 @@
-﻿<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/platform.js/platform.js">
 <link rel="import" href="../bower_components/webcomponentsjs/webcomponents-lite.min.js">
 
@@ -17,6 +17,7 @@
 				border-radius: 5px;
 				background-color: #3F525A;
 				color: #F8F0C2;
+                text-align: justify;
 		  }
 		  .circle {
 				display: inline-block;
