--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -35,6 +35,10 @@
 				color: #68B8DB;
 		  }
 		  
+          .content
+          {
+            text-align: center;
+          }
 		  a, a:hover, a:visited, b
 			{
 				text-decoration : none;
@@ -46,8 +50,10 @@
 			}
 		</style>
 		<div class="card">
-		  <div class="circle">1</div>
-		  <h1>PlastProd</h1>
+            <div class="content">
+                <div class="circle">1</div>
+		        <h1>PlastProd</h1>
+            </div>
 		</div>
 	</template>
 	<script>
