--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -35,6 +35,11 @@
 				margin: 16px 0;
 				color: #68B8DB;
 		  }
+            
+          .content
+            {
+                text-align: center;
+            }
 		  
 		  a, a:hover, a:visited, b
 			{
@@ -47,8 +52,10 @@
 			}
         </style>
         <div class="card">
+         <div class="content">
 		  <div class="circle">1</div>
 		  <h1>Langages de programmation !</h1>
+         </div>
 			<div class="center"><h2>Le JAVA</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/java.svg" width="25%" height="25%"></my-svg></div>
 			<p> Le java est le langage que j'ai le plus utilisé, c'est le langage que j'ai le plus appronfondie car c'était le support de mon D.U.T Informatique. Pendant les 2 années de formation, 
@@ -79,8 +86,10 @@
 			<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES EN PROG.</p></div>
 		</div>
 		<div class="card">
-			<div class="circle">2</div>
-			<h1> IDE/Editeurs de textes !</h1>
+            <div class="content">
+                <div class="circle">2</div>
+			     <h1> IDE/Editeurs de textes !</h1>
+            </div>
 			<div class="center"><h2> Eclipse </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/eclipse.svg" width="25%" height="25%"></my-svg></div>
 			<p>Comme le <b>Java</b> est le langage que j'ai le plus pratiqué, c'est forcément sur cet IDE que je me sens le plus à l'aise, aussi bien pour <b>programmer</b> que pour <b>debug</b>. C'est un environnement que je connais très bien et j'y suis habitué.</p>
@@ -110,8 +119,10 @@
 			<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES SUR IDE/EDITEURS</p></div>
 		</div>
 		<div class="card">
-			<div class="circle">3</div>
-			<h1>Bibliothèques !</h1>
+            <div class="content">
+                <div class="circle">3</div>
+                <h1>Bibliothèques !</h1>
+            </div>
 				<div class="center"><h2>AngularJS</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/angular.svg" width="25%" height="25%"></my-svg></div>
 				<p>J'ai uniquement <b>testé</b> pour voir ce que c'était. Je trouve ça <b>trop compliqué</b> pour ce que ça fournit. Et je n'aime pas du tout la <b>syntaxe</b>.</p>
