--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -50,33 +50,40 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             text-decoration : none;
             color : #68B8DB
         }
-        .center
+        .center, .content
         {
             text-align : center;
         }
     </style>
     <div class="card">
-      <div class="circle">1</div>
-      <h1>Le bac STI !</h1>
+      <div class="content">
+          <div class="circle">1</div>
+          <h1>Le bac STI !</h1>
+      </div>
         <div class="center" ><my-svg src="../public/images/Diplomes/bacSTI.svg" width="65%" height="65%"></my-svg></div>
     </div>
     <div class="card">
+     <div class="content">
       <div class="circle">2</div>
       <h1>Le DUT Informatique !</h1>
         <div class="center" ><my-svg src="../public/images/Diplomes/DUT.svg" width="65%" height="65%"></my-svg></div>
-    </div><div class="card">
-    <div class="circle">3</div>
-      <h1>Le dernier diplôme en date ! (Responsable en Ingiènerie des Logiciels)</h1>
+     </div>
+    <div class="card">
+     <div class="content">
+        <div class="circle">3</div>
+        <h1>Le dernier diplôme en date ! (Responsable en Ingiènerie des Logiciels)</h1>
+     </div>
       <div class="center" > Pas encore d'image pour celui-ci ! (Elle viendra après la cérémonie de remise le <b>9 Décembre 2016 </b>)</div>
     </div>
     <div class="card">  
+     <div class="content">
         <div class="circle">4</div>
           <h1>Les certifications !</h1>
+     </div>
           <div class="center"> <h2> Certification Auto-Entrepreneur</h2></div>    
           <div class="center"><my-svg src="../public/images/Diplomes/Entrepreneur.svg" width="65%" height="65%"></my-svg></div>  
           <div class="center"> <h2> Certification NodeJS</h2></div>    
-          <div class="center"><my-svg src="../public/images/Diplomes/NodeJS.svg" width="65%" height="65%"></my-svg></div>
-         
+          <div class="center"><my-svg src="../public/images/Diplomes/NodeJS.svg" width="65%" height="65%"></my-svg></div> 
     </div>
   </template>
 
