--- a/front/src/my-experiences.html
+++ b/front/src/my-experiences.html
@@ -75,6 +75,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="content">
       <div class="circle">2</div>
       <h1>Stage aux Papeteries de Clairefontaine</h1>
+      </div>
 	  <div class="center"><my-svg src="../public/images/Experiences/clairefontaine.svg" width="25%" height="25%"></my-svg></div>
 	  <p> Stage effectué lors de mon D.U.T Informatique, j'ai dans le cadre de mon diplôme développé une application intranet. Cette application permet de <b>suivre la production</b> d'un atelier. C'est une application <b>Web</b> que j'ai développé en <b>PHP.</b></p>
     </div>
