--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="my-svg.html">
+<link rel="import" href="../bower_comonents/iron-image/iron-image.html">
 <dom-module id="my-diploma">
 
   <template>
@@ -60,7 +61,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div class="circle">1</div>
           <h1>Le bac STI !</h1>
       </div>
-        <div class="center" ><my-svg src="../public/images/Diplomes/bacSTI.svg" width="65%" height="65%"></my-svg></div>
+        <div class="center" ><iron-image src="../public/images/Diplomes/bacSTI.svg"  sizing="cover" preload ></iron-image></div>
     </div>
     <div class="card">
      <div class="content">
