--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -61,7 +61,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div class="circle">1</div>
           <h1>Le bac STI !</h1>
       </div>
-        <div class="center" ><iron-image src="../public/images/Diplomes/bacSTI.svg"  sizing="cover" preload ></iron-image></div>
+        <div class="center" ><iron-image sizing="cover" preload src="../public/images/Diplomes/bacSTI.svg"></iron-image></div>
     </div>
     <div class="card">
      <div class="content">
