--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -25,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 16px;
         margin: 24px;
         border-radius: 5px;
-        background-color: #3F525A;
+        background-color:#3F525A;
         color: #F8F0C2;
         text-align: justify;
       }
@@ -61,14 +61,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div class="circle">1</div>
           <h1>Le bac STI !</h1>
       </div>
-        <div class="center" ><iron-image sizing="contain" style="width:100%; height:100%" preload src="../public/images/Diplomes/bacSTI.svg"></iron-image></div>
+        <div class="center" ><my-svg src="../public/images/Diplomes/bacSTI.svg" width="80%" height="65%"></my-svg></div>
     </div>
     <div class="card">
      <div class="content">
       <div class="circle">2</div>
       <h1>Le DUT Informatique !</h1>
       </div>
-        <div class="center" ><my-svg src="../public/images/Diplomes/DUT.svg" width="65%" height="65%"></my-svg></div>
+        <div class="center" ><my-svg src="../public/images/Diplomes/DUT.svg" width="80%" height="65%"></my-svg></div>
     </div>
     <div class="card">
      <div class="content">
@@ -83,9 +83,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <h1>Les certifications !</h1>
      </div>
           <div class="center"> <h2> Certification Auto-Entrepreneur</h2></div>    
-          <div class="center"><my-svg src="../public/images/Diplomes/Entrepreneur.svg" width="65%" height="65%"></my-svg></div>  
+          <div class="center"><my-svg src="../public/images/Diplomes/Entrepreneur.svg" width="80%" height="65%"></my-svg></div>  
           <div class="center"> <h2> Certification NodeJS</h2></div>    
-          <div class="center"><my-svg src="../public/images/Diplomes/NodeJS.svg" width="65%" height="65%"></my-svg></div> 
+          <div class="center"><my-svg src="../public/images/Diplomes/NodeJS.svg" width="80%" height="65%"></my-svg></div> 
     </div>
   </template>
 
@@ -93,8 +93,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     Polymer({
 
-      is: 'my-diploma'
-
+      is: 'my-diploma',
+      
+      ready : function()
+        {
+            console.log("readyDiploma");
+        }
     });
 
   </script>
