--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -22,6 +22,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/social-media-icons/social-media-icons.html">
 <link rel="import" href="my-svg.html">
 <link rel="import" href="my-icons.html">
+<linl rel="import" href="elements.html">
 
 <dom-module id="my-app">
 
