--- a/front/src/elements.html
+++ b/front/src/elements.html
@@ -1,3 +1,4 @@
+<link rel="import" href="my-app.html">
 <link rel="import" href="my-diploma.html">
 <link rel="import" href="my-experiences.html">
 <link rel="import" href="my-history.html">
