Ajout de la navigation du drawer propre

--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -54,6 +54,7 @@
                 <div class="circle">1</div>
 		        <h1>PlastProd</h1>
             </div>
+            <p> YOLOOOO</p>
 		</div>
 	</template>
 	<script>
