--- a/front/src/elements.html
+++ b/front/src/elements.html
@@ -6,3 +6,4 @@
 <link rel="import" href="my-projects.html">
 <link rel="import" href="my-skills.html">
 <link rel="import" href="my-svg.html">
+<link rel="import" href="../bower_components/chart-elements/chart-radar.html">
