--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/platform.js/platform.js">
 <link rel="import" href="../bower_components/webcomponentsjs/webcomponents-lite.min.js">
+<link rel="import" href="../bower_components/chart-elements/chart-radar.html">
 
 <dom-module id="my-skills">
     <!-- Defines the element's Style and local DOM !-->
