Petit correction de lien

--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -125,11 +125,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	    <div class="svg"><a  href="https://twitter.com/gerard8_gerard" target="_blank"><social-media-icons icon="twitter" color="#1DA1F2" size="36" title="Twitter profile"></social-media-icons></a></div>
 		<div class="svg"><a  href="https://facebook.com/HeliexIn" target="_blank"><social-media-icons icon="facebook" color="#3B5999" size="36" title="Facebook profile"></social-media-icons></a></div>
 		<div class="svg"><a  href="https://www.linkedin.com/in/christophegerard8" target="_blank"><social-media-icons icon="linkedin" color="#0274B3" size="36" title="Linked In"></social-media-icons></a></div>
-		<div class="svg"><a  href="javascript:void(0);" target="_blank"><social-media-icons icon="skype" color="#00A8E6" size="36" title="Tyti8888"</a></social-media-icons></div>
+		<div class="svg"><a  href="javascript:void(0);" target="_blank"><social-media-icons icon="skype" color="#00A8E6" size="36" title="Tyti8888"></social-media-icons></a></social-media-icons></div>
       </app-drawer>
 
       <!-- Main content -->
-      <app-header-layout has-scrolling-region>
+      <app-header-layout>
 
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
@@ -143,7 +143,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-diploma name="diploma"></my-diploma>
           <my-experiences name="experiences"></my-experiences>
           <my-skills name="skills"></my-skills>
-	  <my-projects name="projects"></my-projects>
+	      <my-projects name="projects"></my-projects>
         </iron-pages>
 		<footer> Christophe GERARD - 2016 &copy;</footer>
       </app-header-layout>
